@@ -468,6 +468,9 @@ It can be used to enable/disable the tab bar individually on each frame
 independently from the value of 'tab-bar-mode' and 'tab-bar-show'.
 
 ---
+*** New command 'tab-duplicate' like in web browsers.
+
+---
 *** New user option 'tab-bar-tab-name-format-function'.
 
 ---
